Refs #43 fixed unmatched upms title being cutoff and html input hidden type tag in previous revision

--- a/css/intermediary.css
+++ b/css/intermediary.css
@@ -295,7 +295,6 @@ tr.btopblue td{
 }
 tr.upms td, tr.upms th{
 	text-decoration:none;
-	white-space:nowrap;
 	text-align: center;
 	background-color:#C5E5FA;
 }
